plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

def minecraftMajor = project.minecraft_version.tokenize('.').take(2).join('.')
version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = "Mapple-${minecraftMajor}"
}

tasks.withType(AbstractArchiveTask).configureEach {
	archiveVersion = project.mod_version
}

repositories {
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	testImplementation platform("org.junit:junit-bom:5.12.2")
	testImplementation "org.junit.jupiter:junit-jupiter"
	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

loom {
	accessWidenerPath = file("src/main/resources/mapple.accesswidener")

	runs {
		server {
			vmArgs "-Xmx6G", "-Xms6G", "-XX:+UseZGC", "-Xlog:gc*:file=logs/gc.log"
		}
	}
}

test {
	useJUnitPlatform()
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = "mapple-${minecraftMajor}"
			from components.java
		}
	}

	repositories {
	}
}
